2015-02-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/mappings.i:
	  Fix gbz80 function entry helper.
	* src/SDCCralloc.hpp:
	  Use weight machanism for deciding which subtree to process first - should reduce memory consumption and improve the heuristic in the register allocator.

2015-02-05 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* doc/Makefile.in: copy *.svg graphic files when using VPATH too

2015-02-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/lib/*/crtcall.s,
	  device/lib/*/crtenters,
	  device/lib/*/Makefile.in,
	  src/z80/gen.c,
	  src/z80/mappings.i,
	  src/z80/peep.c:
	  Fix name of helper function for function pointers, introduce Alan Cox' proposal for helper function for function header.

2015-02-02 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCast.c:
	  Add check for infinite recursive call of copyAst().

2015-01-30 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Fix references to obsolete keywords.

2015-01-29 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Reorganize documentation of language extensions, in particular named address spaces, separate mcs51isms, remove references to obsolete keywords.

2015-01-28 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Update documentation on C dialect selection.

2015-01-27 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCsymt.c:
	  Fix bug #2349.
	* support/regression/test/bug-2349.c:
	  Add a new test for bug #2349.

2015-01-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCmem.c,
	  src/SDCCsymt.h,
	  src/stm8/main.c:
	  Apply patch by Pascal for trap handlers.

2015-01-24 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/stm8/gen.c:
	  Fix a bug in genPointerGet(): negative offset is not handled correctly.
	* support/regression/test/bug-2239.c:
	  More tests are added and enabled for stm8.

2015-01-24 Ben Shi <powerstudio1st AT 163 DOT com>